--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/app": "^0.4.5",
+    "@firebase/storage": "^0.3.2",
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
+    "firebase": "^6.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-images": "^1.0.0",
+    "react-photo-gallery": "^7.0.2",
     "react-scripts": "3.0.1"
   },
   "scripts": {
