--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
     "firebase": "^6.2.0",
+    "material-ui": "^1.0.0-beta.47",
+    "material-ui-colors": "^1.0.0",
     "react": "^16.8.6",
+    "react-background-slider": "^1.2.0",
+    "react-background-slideshow": "^1.0.4",
     "react-dom": "^16.8.6",
     "react-images": "^1.0.0",
     "react-photo-gallery": "^7.0.2",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-swipeable-views": "^0.13.3"
   },
   "scripts": {
     "start": "react-scripts start",
