--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "material-ui": "^1.0.0-beta.47",
     "material-ui-colors": "^1.0.0",
     "react": "^16.8.6",
+    "react-awesome-button": "^6.1.2",
     "react-background-slider": "^1.2.0",
-    "react-background-slideshow": "^1.0.4",
     "react-dom": "^16.8.6",
     "react-images": "^1.0.0",
     "react-photo-gallery": "^7.0.2",
