--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^6.2.0",
     "material-ui": "^1.0.0-beta.47",
     "material-ui-colors": "^1.0.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-awesome-button": "^6.1.2",
     "react-background-slider": "^1.2.0",
