--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@firebase/storage": "^0.3.2",
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
+    "dotenv": "^8.2.0",
     "firebase": "^6.2.0",
     "material-ui": "^1.0.0-beta.47",
     "material-ui-colors": "^1.0.0",
